# tech-experiments

./: README.md  build.gradle  docker-compose-cluster.yml  docker-compose.yml  hello-world.nginx  load-balancer.nginx  package-lock.json  package.json  pom.xml  reverse-proxy.nginx  run.sh
airflow-experiment/: Pipfile  README.md
angular-couchdb-experiment/: angular.json  init-couchdb.sh  package.json
ansible-experiment/: hosts  nginx.conf
artifactory-experiment/: README.md  stop.sh  upload.sh
cassandra-experiment/: .gitignore  build.gradle  create-network.sh  docker-compose-single-node.yml  run-cluster.sh  run-single-node.sh  settings.gradle
chef-experiment/: README.md  run-default.sh
clickhouse-experiment/: .gitignore  CLAUDE.md  README.md  Tiltfile  dashboarding.md  docker-compose.yaml  justfile
deployment-tools-experiment/: README.md
diagrams.net-experiment/: README.md  build.sh
docker/: docker-compose.yml
docker-experiment/: README.md
dummy-app/: README.md
dummyapp2/: pom.xml
elasticsearch-experiment/: .gitignore  README.md  settings.gradle
elk-experiment/: README.md  settings.gradle
file-docker/: test.pp
firefox/: run-test.sh
flask-scikit-learn-experiment/: Dockerfile  app.py
flutter-experiment/: .dockerignore  .gitignore  Dockerfile  README.md  pubspec.yaml
graphql-experiment/: .dockerignore  Dockerfile  README.md  angular.json  codegen.yml  package.json  tslint.json
hadoop-experiment/: Dockerfile  README.md  build.gradle  (+1 more)
otel-experiment/: README.md  docker-compose.yml  ecosystem.config.js  log.py  main.py  pyproject.toml
(+541 files in other folders)
